source/css/scss/components/text-banner/_module.scss
.spf-body {
    .spf-text-banner {
        padding: uikit-space(1);
        display: inline-block;
        width: 100%;
        line-height: 1;
        color: $uikit-colour-Text;
        &.spf-text-banner--large {
            padding: uikit-space(2);
        }
        &.spf-text-banner--hero {
            background-color: $uikit-colour-Hero;
            color: $uikit-colour-Background;
        }
        &.spf-text-banner--primary {
            background-color: $uikit-colour-Primary;
            color: $uikit-colour-Background;
        }
        &.spf-text-banner--light {
            background-color: $uikit-colour-Background;
        }
        &.spf-text-banner--dark {
            background-color: $uikit-colour-Secondary;
            color: $uikit-colour-Background;
        }
        &.spf-text-banner--gradiant {
            background: linear-gradient(to right, $uikit-colour-Primary, $spf-colour-second-Gradiant);
            color: $uikit-colour-Background;
        }
        &.spf-text-banner--image {
            background-image: url('../../../../images/text-banner-image.png');
            background-size: cover;
            position: relative;
            padding: uikit-space(0);
            overflow: hidden;
            max-height: 200px;
            overflow: auto;
            .spf-text-banner--image-content {
                position: relative;
                padding: uikit-space(1) uikit-space(2);
                display: inline-block;
                height: 100%;
                width: 35%;
                min-width: 250px;
                margin-left: uikit-space(-1);
                &::before {
                    content: ' ';
                    position: absolute;
                    width: 100%;
                    height: 100%;
                    top: 0;
                    left: 0;
                    transform: skewX(-15deg);
                    background-color: $uikit-colour-Primary;
                }
                .spf-text-banner--image-content-text {
                    position: relative;
                    height: 100%;
                    width: 100%;
                    color: white;
                }
            }
        }
          &.spf-text-banner--image-gradiant {
            @extend .spf-text-banner--image;
            .spf-text-banner--image-content:before {
              background: linear-gradient(to right, $uikit-colour-Primary, $spf-colour-second-Gradiant);
            }
          }
    }
}

